# GoL

./: .gitignore
cpp/: CMakeLists.txt  conf.hpp  main.cpp
cpp/Core/: Core.cpp  Core.hpp  inputs.cpp  utils.cpp
cpp/utils/: Chunk.cpp  Chunk.hpp
py/: Displayer.py  GLOBALS.py  main.py  utils.py
